# anarci_toolz

./: .gitignore  LICENSE  MANIFEST.in  README.md  demo.ipynb  requirements.txt  setup.cfg
.github/workflows/: tag-version.yml
src/anarci_toolz/: __main__.py  abnumber_tool.py  anarci_tool.py  imgt_index_ordering.py  numbering.py  pipeline.py  slice_dna_regions.py  utils.py  validation.py
test_files/: therasabdab_sample.csv
