[metadata]
name = anarci-toolz
version = attr:anarci_toolz.__version__
author = Jonathan Cheng 
author_email = jonchengw@gmail.com
license = MIT
description = Performant convenience wrapper for ANARCI and AbNumber antibody sequence aligners, notably for sequence annotation
long_description = file: README.md
long_description_content_type = text/markdown
classifiers = 
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
package_dir=
    =src
packages = find:
python_requires = >=3.10
install_requires = file: requirements.txt


[options.packages.find]
where=src

[options.entry_points]
console_scripts = 
    anarci-toolz = anarci_toolz.__main__:main